[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/TemplateLevel.gd" type="Script" id=4]
[ext_resource path="res://Assets/dpcomic.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 1024, 0 )

[node name="TemplateLevel" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -10.0
margin_right = -72.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
margin_left = 600.0
margin_top = 290.0
margin_right = 640.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -101.5
margin_right = 55.0
margin_bottom = -64.5
custom_fonts/font = SubResource( 1 )
text = "Ready?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Walls" type="Node" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 600 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 35, 300 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 300 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTimer_timeout"]
[connection signal="screen_exited" from="Ball/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[editable path="Ball"]
